--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "cjs-loader": "^0.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "twilio": "^3.67.1",
